# implot

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  TimeFormatter.hpp  colours.h  implot.cpp  implot.h  implot_demo.cpp  implot_internal.h  implot_items.cpp
.github/: CMakeLists.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  makefile.yml
backends/: implot_backend.h  implot_gpu.h  implot_impl_opengl3.cpp  implot_impl_opengl3.h  implot_opengl3.cpp
example/: CMakeLists.txt  README.md  main.cpp
